# wk-predictions-rs

./: Cargo.toml  diesel.toml  login.html
assets/: style.css  utils.js
migrations/2017-11-13-202931_create_users_table/: up.sql
migrations/2018-04-10-190859_create_locations/: up.sql
migrations/2018-04-10-190905_create_groups/: up.sql
migrations/2018-04-10-190911_create_stages/: down.sql  up.sql
migrations/2018-04-10-190916_create_countries/: up.sql
migrations/2018-04-10-190926_create_group_memberships/: down.sql  up.sql
migrations/2018-04-10-190934_create_match_participants/: down.sql  up.sql
migrations/2018-04-10-190940_create_matches/: up.sql
migrations/2018-04-10-190945_create_match_outcomes/: down.sql  up.sql
migrations/2018-04-10-190952_create_match_predictions/: down.sql  up.sql
migrations/2018-04-10-191001_create_group_predictions/: down.sql  up.sql
migrations/2018-04-10-191007_create_favourites/: up.sql
migrations/2018-04-10-193630_add_participant_source/: down.sql  up.sql
migrations/2018-06-04-204848_add_view_for_match_info/: down.sql  up.sql
migrations/2018-06-05-190355_add_phase_to_favourites/: down.sql  up.sql
migrations/2018-06-06-071251_trigger_updated_at_on_relevant_tables/: down.sql  up.sql
migrations/2018-06-07-155154_add_source_of_prediction/: down.sql  up.sql
migrations/2018-06-18-201050_create_user_match_points/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.patch  schema.rs  scores.rs
templates/: dashboard.html  layout.html  login.html  register.html  rules.html  unauthenticated.html
(+27 files in other folders)
