[package]
name = "wk-predictions"
version = "0.1.0"
authors = ["Joeri Samson <joerisamson@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = { version = "0.6", features=["alpn"] }
openssl = { version="0.10", features = ["v110"] }
diesel = { version = "1.2.1", features = ["postgres"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.9.0"
futures = "0.1"
bcrypt = "0.2"
failure = "0.1.1"
env_logger = "0.5.9"
