[package]
name = "wk-predictions"
version = "0.1.0"
authors = ["Joeri Samson <joerisamson@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = { git = "https://github.com/actix/actix-web.git" }
diesel = { version = "1.3.0", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.13.0"
futures = "0.1"
bcrypt = "0.2"
failure = "0.1.1"
env_logger = "0.5.9"
tera = "0.11"
lazy_static = "1.0.0"
csv = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.5"
